# lumen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 2026_05_21_0001-0001_initial.py  2026_05_21_0002-0002_bookmarks.py  2026_05_21_0003-0003_lesson_preview.py  2026_07_01_0004-0004_quiz_attempts.py  2026_07_02_0005-0005_discussions.py  2026_07_03_0006-0006_course_learning_outcomes.py  2026_07_04_0007-0007_discussion_subscriptions.py  2026_07_05_0008-0008_courses_slug_partial_unique.py  2026_07_05_0008-0008_drop_lesson_progress_payload.py  2026_07_05_0008-0008_notifications_index_swap.py  2026_07_05_0009-0009_drop_lesson_progress_payload.py  2026_07_05_0010-0010_courses_slug_partial_unique.py  2026_07_05_0011-0011_drop_discussion_subscriptions.py  2026_07_05_0012-0012_drop_bookmarks.py  2026_07_05_0013-0013_drop_chat_messages.py  2026_07_05_0014-0014_courses_search_vector.py  2026_07_06_0015-0015_users_notification_prefs.py  2026_07_06_0016-0016_notifications_digested_at.py  2026_07_07_0017-0017_pgvector_extension.py  2026_07_07_0018-0018_lesson_chunks.py  2026_07_08_0019-0019_review_cards.py  2026_07_08_0020-0020_enrollments_badge_credential.py  2026_07_09_0021-0021_tutor_conversations.py  2026_07_10_0022-0022_llm_calls.py  2026_07_11_0023-0023_agent_traces_and_retrieval_audits.py  2026_07_12_0024-0024_learning_paths.py  2026_07_12_0025-0025_mcp_clients.py  2026_07_13_0026-0026_course_draft_traces.py  2026_07_27_0027-0027_l21sec_grandfather_email_verify_and_tutor_turn_jobs.py  2026_07_28_0028-0028_tutor_turn_course_context.py  2026_07_28_0029-0029_seed_free_preview_lessons.py  2026_07_29_0033-0033_course_visibility_moderation.py  2026_08_01_0030-0030_account_lifecycle_users_deleted_at.py  2026_08_02_0031-0031_role_collapse_backfill.py  2026_08_02_0032-0032_role_default_user.py  2026_08_05_0038-0038_byok_credentials.py  2026_08_05_0039-0039_llm_calls_billing_mode.py  2026_08_05_0040-0040_tutor_turn_credential_id.py  2026_08_05_0041-0041_lesson_chunks_embedding_model.py  2026_08_06_0042-0042_rag_acl_join_indexes.py  (+11 more)
apps/backend/app/: __init__.py  cli.py  demo_questions.py  main.py
apps/backend/app/api/: deps.py  router.py
apps/backend/app/core/: badges_keys.py  config.py  cost_scripts.py  email_type.py  errors.py  idempotency.py  ids.py  llm_sanitize.py  logging.py  otel.py  prod_guards.py  rate_limit_metrics.py  ratelimit.py  secrets_crypto.py  security.py  sentry_scrubber.py  tracing.py
apps/backend/app/db/: base.py  migration_phase_guard.py  session.py
apps/backend/app/evals/: __init__.py  __main__.py  adversarial.py  baseline.py  golden.py  judge.py  reports.py  run_baseline.py  runner.py
apps/backend/app/mcp/: __init__.py  __main__.py  auth.py  principal.py  registry_metadata.json  server.py  tools.py
apps/backend/app/models/: __init__.py  agent_trace.py  asset.py  audit.py  bookmark.py  chat.py  course.py  course_draft_trace.py  discussion.py  discussion_subscription.py  idempotency.py  learning_brief.py  learning_path.py  lesson_chunk.py  llm_call.py  mcp_client.py  moderation.py  notification.py  quiz_attempt.py  retrieval_audit.py  review_card.py  tutor_conversation.py  tutor_turn_job.py  user.py  user_llm_credential.py
apps/backend/app/repositories/: audit.py  chat.py  courses.py  discussions.py  learning_briefs.py  moderation.py  notifications.py  user_llm_credentials.py  users.py
apps/backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  course.py  discussion.py  learner_traces.py  learning_brief.py  llm_credential.py  llm_provider.py  notification.py  notification_prefs.py  upload.py  user.py
apps/backend/app/seeds/: __init__.py  agentic_demo.py  demo.py  rag_from_scratch_demo.py  ts_variance_demo.py
apps/backend/app/services/: account.py  admin_users.py  agent_tracer.py  ai_authoring.py  analytics.py  auth.py  authoring_orchestrator.py  badges.py  build.py  byok.py  capabilities.py  chat.py  clone_projection.py  code_runner_subprocess.py  content_ingest.py  courses.py  discussions.py  email.py  email_change.py  email_template.py  email_verify.py  embeddings.py  embeddings_ingest.py  embeddings_retrieval.py  enrollment.py  fsrs.py  idempotency.py  learner_traces.py  learning_brief.py  learning_path.py  llm.py  llm_call_log.py  llm_credentials.py  llm_pricing.py  llm_providers.py  llm_stream.py  mastery.py  moderation.py  moderation_safety.py  moderation_taxonomy.py  (+14 more)
apps/backend/app/workers/: celery_app.py
apps/backend/evals/authoring/: dataset.jsonl
apps/backend/evals/ingest/: dataset.jsonl
apps/backend/evals/reports/: .gitkeep
apps/backend/evals/security/: probes.jsonl
apps/backend/scripts/: export_openapi.py
apps/backend/tests/: conftest.py  test_account_cascade_invariant.py  test_admin.py  test_admin_courses.py  test_admin_grant_revoke.py  test_admin_moderation.py  test_admin_observability_api.py  test_admin_search.py  test_admin_stats.py  test_admin_subject_delete.py  test_admin_tag_delete.py  test_adversarial_eval.py  test_agent_tracer.py  test_ai_authoring.py  test_analytics.py  test_analytics_and_duplicate.py  test_archive_endpoints.py  test_archived_access.py  test_audit_cursor.py  test_auth.py  test_auth_suspended_codes.py  test_authoring_brief_constraints.py  test_authoring_orchestrator.py  test_authoring_trace_api.py  test_badges.py  test_baseline_eval.py  test_bookmark_visibility.py  test_bookmarks.py  test_build_failed_state.py  test_build_idempotency.py  test_build_per_phase_concurrency.py  test_builders.py  test_byok_boot_guard.py  test_byok_dispatch_fallback.py  test_byok_feature_flag.py  test_byok_resolve.py  test_byok_rotation.py  test_byok_sink_completion.py  test_byok_sink_redaction.py  test_byok_threading.py  (+181 more)
(+626 files in other folders)
