[project]
name = "lumen-backend"
version = "1.0.0"
description = "Lumen — FastAPI backend for the e-learning platform"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Lumen Maintainers" }]
readme = "README.md"

dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  # pgvector SQLAlchemy adapter — the Python side of the ``vector``
  # column used by ``lesson_chunks`` (Phase E0). The Postgres-side
  # extension is enabled by migration ``0017_pgvector_extension`` and
  # requires the ``pgvector/pgvector:pg17`` image (or any build that
  # bundles the extension) — bare ``postgres:17-alpine`` will not work.
  "pgvector>=0.3",
  "alembic>=1.14",
  "passlib[argon2]>=1.7.4",
  "argon2-cffi>=23.1",
  "pyjwt[crypto]>=2.10",
  "python-multipart>=0.0.18",
  "email-validator>=2.2",
  "httpx>=0.28",
  "redis>=5.2",
  "celery[redis]>=5.4",
  "boto3>=1.35",
  "botocore>=1.35",
  "structlog>=24.4",
  "orjson>=3.10",
  "slowapi>=0.1.9",
  "prometheus-client>=0.21",
  "opentelemetry-api>=1.29",
  "opentelemetry-sdk>=1.29",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
  "opentelemetry-instrumentation-redis>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29",
  "sentry-sdk[fastapi]>=2.19",
  "python-slugify>=8.0",
  "nanoid>=2.0.0",
  "reportlab>=4.2",
  # Open Badges 3.0 / W3C VC issuance (rebuild Phase E5):
  # cryptography ships Ed25519 in pure-Rust primitives; pyld is the
  # reference JSON-LD library — we keep it on hand for future
  # URDNA2015 canonicalization once we move to a did:web issuer.
  # Today's signing path uses JCS (RFC 8785-style deterministic
  # JSON) over the credential, which is enough for OB3 §8.2
  # "EdDSA over JCS" and avoids the C-extension dance.
  "cryptography>=42",
  "pyld>=2.0",
  # Free Spaced Repetition Scheduler v6 (rebuild Phase E4).
  # Pure-Python implementation of the FSRS-6 algorithm — drives
  # the per-(user, lesson) review queue at /me/reviews. Replaces
  # SM-2 across the modern Anki / Mochi / RemNote ecosystem.
  "fsrs>=5.0",
  "typer>=0.15",
  "rich>=13.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-httpx>=0.34",
  "anyio>=4.6",
  "ruff>=0.8.3",
  "mypy>=1.13",
  "types-redis>=4.6",
  "types-passlib>=1.7",
  "factory-boy>=3.3",
  "freezegun>=1.5",
  "respx>=0.22",
  "faker>=33.1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

# ---------------- ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pyflakes / pycodestyle
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "ASYNC",            # async lints
  "S",                # bandit
  "C4", "T20",        # comprehensions / no prints
  "SIM",              # simplify
  "RUF",
]
ignore = [
  "E501",             # handled by formatter
  "B008",             # FastAPI Depends pattern
  "S101",             # assert ok in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311", "ASYNC"]
"app/cli.py" = ["T201"]

# ---------------- mypy ----------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = "alembic/versions"

[[tool.mypy.overrides]]
module = ["passlib.*", "celery.*", "slowapi.*", "pgvector.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ---------------- pytest ----------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
# pytest-asyncio 1.x changed the default fixture loop
# scope from session to function. Our session-scoped `_engine`
# fixture creates an asyncpg connection on the session loop; if
# every test then runs on its own function-scoped loop, that
# connection's bound future is "attached to a different loop"
# and every test errors with RuntimeError. Pin back to session
# scope to preserve the pre-1.x behaviour without rewriting
# every fixture.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
  # dropped strict "error" mode. The Python ecosystem
  # upgraded faster than the code (starlette 1, httpx 0.28+,
  # FastAPI's ORJSONResponse deprecation, PyJWT's
  # InsecureKeyLengthWarning, structlog 25, pytest-asyncio 1)
  # and trying to keep "error" mode green via individual
  # `ignore::` rules turned into whack-a-mole. Warnings still
  # print so CI output flags them; they no longer fail the run.
  "default",
  # Bcrypt/passlib chatter we definitely don't care about.
  "ignore::DeprecationWarning:passlib.*",
]

[tool.coverage.run]
branch = true
omit = [
  "app/cli.py",
  "app/workers/celery_app.py",
  "app/core/otel.py",
  "alembic/*",
]
